Add basic calculator layout

--- a/index.html
+++ b/index.html
@@ -36,6 +36,143 @@
 
 <body>
 
+   <div class="container calc-container">
+      <div class="row">
+         <div class="col-xs-12 display"></div>
+      </div>
+
+      <div class="row">
+         
+         <div class="col-xs-3 button">
+            <div class="button-inner">
+               CE
+            </div>
+         </div>
+
+         <div class="col-xs-3 button">
+            <div class="button-inner">
+               C
+            </div>
+         </div>
+
+         <div class="col-xs-3 button">
+            <div class="button-inner number">
+               +/-
+            </div>
+         </div>
+
+         <div class="col-xs-3 button">
+            <div class="button-inner">
+               /
+            </div>
+         </div>
+
+      </div>
+
+      <div class="row">
+         <div class="col-xs-3 button">
+            <div class="button-inner number">
+               7
+            </div>
+         </div>
+
+         <div class="col-xs-3 button">
+            <div class="button-inner number">
+               8
+            </div>
+         </div>
+
+         <div class="col-xs-3 button">
+            <div class="button-inner number">
+               9
+            </div>
+         </div>
+
+         <div class="col-xs-3 button">
+            <div class="button-inner">
+               *
+            </div>
+         </div>
+
+      </div>
+
+      <div class="row">
+         <div class="col-xs-3 button">
+            <div class="button-inner number">
+               4
+            </div>
+         </div>
+
+         <div class="col-xs-3 button">
+            <div class="button-inner number">
+               5
+            </div>
+         </div>
+
+         <div class="col-xs-3 button">
+            <div class="button-inner number">
+               6
+            </div>
+         </div>
+
+         <div class="col-xs-3 button">
+            <div class="button-inner">
+               -
+            </div>
+         </div>
+
+      </div>
+
+      <div class="row">
+         <div class="col-xs-3 button">
+            <div class="button-inner number">
+               1
+            </div>
+         </div>
+
+         <div class="col-xs-3 button">
+            <div class="button-inner number">
+               2
+            </div>
+         </div>
+
+         <div class="col-xs-3 button">
+            <div class="button-inner number">
+               3
+            </div>
+         </div>
+
+         <div class="col-xs-3 button">
+            <div class="button-inner">
+               +
+            </div>
+         </div>
+
+      </div>
+
+      <div class="row">
+         <div class="col-xs-3 button">
+            <div class="button-inner number">
+               0
+            </div>
+         </div>
+
+         <div class="col-xs-3 button">
+            <div class="button-inner">
+               .
+            </div>
+         </div>
+
+         <div class="col-xs-6 button">
+            <div class="button-inner">
+               =
+            </div>
+         </div>
+
+      </div>
+   </div>
+
+
 	<!-- MAIN javascript file -->
 	<script src="assets/js/main.js"></script> 
 
