get numbers to display on button click

--- a/index.html
+++ b/index.html
@@ -38,135 +38,135 @@
 
    <div class="container calc-container">
       <div class="row">
-         <div class="col-xs-12 display"></div>
+         <div class="col-xs-12" id="display"></div>
       </div>
 
       <div class="row">
          
          <div class="col-xs-3 button">
-            <div class="button-inner">
+            <button class="button-inner">
                CE
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-3 button">
-            <div class="button-inner">
+            <button class="button-inner">
                C
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-3 button">
-            <div class="button-inner number">
+            <button class="button-inner">
                +/-
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-3 button">
-            <div class="button-inner">
+            <button class="button-inner">
                /
-            </div>
+            </button>
          </div>
 
       </div>
 
       <div class="row">
          <div class="col-xs-3 button">
-            <div class="button-inner number">
+            <button class="button-inner number" value=7>
                7
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-3 button">
-            <div class="button-inner number">
+            <button class="button-inner number" value=8>
                8
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-3 button">
-            <div class="button-inner number">
+            <button class="button-inner number" value=9>
                9
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-3 button">
-            <div class="button-inner">
+            <button class="button-inner">
                *
-            </div>
+            </button>
          </div>
 
       </div>
 
       <div class="row">
          <div class="col-xs-3 button">
-            <div class="button-inner number">
+            <button class="button-inner number" value=4>
                4
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-3 button">
-            <div class="button-inner number">
+            <button class="button-inner number" value=5>
                5
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-3 button">
-            <div class="button-inner number">
+            <button class="button-inner number" value=6>
                6
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-3 button">
-            <div class="button-inner">
+            <button class="button-inner">
                -
-            </div>
+            </button>
          </div>
 
       </div>
 
       <div class="row">
          <div class="col-xs-3 button">
-            <div class="button-inner number">
+            <button class="button-inner number" value=1>
                1
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-3 button">
-            <div class="button-inner number">
+            <button class="button-inner number" value=2>
                2
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-3 button">
-            <div class="button-inner number">
+            <button class="button-inner number" value=3>
                3
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-3 button">
-            <div class="button-inner">
+            <button class="button-inner" >
                +
-            </div>
+            </button>
          </div>
 
       </div>
 
       <div class="row">
          <div class="col-xs-3 button">
-            <div class="button-inner number">
+            <button class="button-inner number" value=0>
                0
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-3 button">
-            <div class="button-inner">
+            <button class="button-inner">
                .
-            </div>
+            </button>
          </div>
 
          <div class="col-xs-6 button">
-            <div class="button-inner">
+            <button class="button-inner">
                =
-            </div>
+            </button>
          </div>
 
       </div>
