Get operators to render on display

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
          </div>
 
          <div class="col-xs-3 button">
-            <button class="button-inner">
+            <button class="button-inner operator" value =/>
                /
             </button>
          </div>
@@ -89,7 +89,7 @@
          </div>
 
          <div class="col-xs-3 button">
-            <button class="button-inner">
+            <button class="button-inner operator" value =*>
                *
             </button>
          </div>
@@ -116,7 +116,7 @@
          </div>
 
          <div class="col-xs-3 button">
-            <button class="button-inner">
+            <button class="button-inner operator" value =->
                -
             </button>
          </div>
@@ -143,7 +143,7 @@
          </div>
 
          <div class="col-xs-3 button">
-            <button class="button-inner" >
+            <button class="button-inner operator" value =+ >
                +
             </button>
          </div>
