--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
          </div>
 
          <div class="col-xs-6 button">
-            <button class="button-inner">
+            <button class="button-inner" id="equal">
                =
             </button>
          </div>
