--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
       <div class="row">
          
          <div class="col-xs-3 button">
-            <button class="button-inner">
-               CE
+            <button class="button-inner" id="allClear">
+               AC
             </button>
          </div>
 
          <div class="col-xs-3 button">
-            <button class="button-inner">
+            <button class="button-inner" id="clear">
                C
             </button>
          </div>
