--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
          </div>
 
          <div class="col-xs-3 button">
-            <button class="button-inner">
+            <button class="button-inner" id="negate">
                +/-
             </button>
          </div>
