--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
 
    <div class="container calc-container">
       <div class="row">
-         <div class="col-xs-12" id="display"></div>
+         <div class="col-xs-12" id="display">0</div>
       </div>
 
       <div class="row">
          
          <div class="col-xs-3 button">
-            <button class="button-inner" id="allClear">
+            <button class="button-inner clear-button" id="allClear">
                AC
             </button>
          </div>
 
          <div class="col-xs-3 button">
-            <button class="button-inner" id="clear">
+            <button class="button-inner clear-button" id="clear">
                C
             </button>
          </div>
